Configure application plugin.