@@ -2,6 +2,9 @@ plugins {
     id("application")
 }
 
+application.mainClass.set("panama.WinApi")
+application.applicationDefaultJvmArgs += "--enable-preview"
+
 dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.1")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.1")
